@@ -49,7 +49,7 @@ First we need to turn the template into a callable:
 Let's try rendering this template without passing a target language.
     
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span>
       Default
     </span>
@@ -58,7 +58,7 @@ Let's try rendering this template without passing a target language.
 Now we'll render the template again---passing German as the language.
 
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span>Mock translation of 'test_msgid'.</span>
   </div>
 
@@ -76,7 +76,7 @@ Not passing a language:
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span>
       Default
     </span>
@@ -85,7 +85,7 @@ Not passing a language:
 Passing German:
   
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span>Mock translation of 'Default'.</span>
   </div>
 
@@ -101,14 +101,14 @@ We could also add a named block inside the tag.
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <p>
       <span>18</span> bananas.
     </p>
   </div>
     
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <p>Mock translation of '${count} bananas.'.</p>
   </div>
 
@@ -129,7 +129,7 @@ Not passing a language:
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Simple Title">
       Default
     </span>
@@ -138,7 +138,7 @@ Not passing a language:
 Passing German:
 
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Mock translation of 'Simple Title'.">
       Default
     </span>
@@ -159,7 +159,7 @@ Not passing a language:
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Simple Title">
       Default
     </span>
@@ -168,7 +168,7 @@ Not passing a language:
 Passing German:
 
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Mock translation of 'title_simple'.">
       Default
     </span>
@@ -189,7 +189,7 @@ Not passing a language:
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Simple Title">
       Default
     </span>
@@ -198,7 +198,7 @@ Not passing a language:
 Passing German:
 
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Mock translation of 'title_simple'.">
       Default
     </span>
@@ -220,7 +220,7 @@ Not passing a language:
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Simple Title" longdesc="A not so short description.">
       Default
     </span>
@@ -229,7 +229,7 @@ Not passing a language:
 Passing German:
 
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Mock translation of 'title_simple'."
           longdesc="Mock translation of 'desc_short'.">
       Default
@@ -259,7 +259,7 @@ Not passing a language:
 
   >>> template = PageTemplate(body)
   >>> print template.render()
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Title">
       Default, "default", 'default'
     </span>
@@ -269,7 +269,7 @@ Not passing a language:
 Passing German:
 
   >>> print template.render(target_language='de')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <span title="Mock translation of 'aid'.">Mock translation of 'tid'.</span>
     <span>Mock translation of 'tid'.</span>
   </div>
