@@ -31,7 +31,7 @@ tal:define, tal:attributes, tal:contents
   ...   <span tal:replace="'Hello World!'"><b>Hello Universe!</b></span>
   ...   <span tal:content="None" />
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <span class="defabc" style="hij" onclick="alert();" id="test">abcghi</span>
       Hello World!
       Hello World!
@@ -47,7 +47,7 @@ tal:repeat
   ...     <li tal:repeat="i range(5)"><span tal:replace="'Item ' + str(i) + ')'" /></li>
   ...   </ul>
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <ul>
         <li>Item 0)</li>
         <li>Item 1)</li>
@@ -66,7 +66,7 @@ tal:repeat (repeat-variable)
   ...     <li tal:repeat="i range(3)"><span tal:replace="str(i) + ' ' + str(repeat['i'].even())" /></li>
   ...   </ul>
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <ul>
         <li>0 True</li>
         <li>1 False</li>
@@ -86,7 +86,7 @@ tal:condition
   ...     Do not show me!
   ...   </div>
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <div>
         Show me!
       </div>
@@ -102,7 +102,7 @@ tal:condition
   ...        line comment -->
   ...   <!-- a comment with an ${'expression'} -->
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <!-- a comment -->
       <!-- a multi-
            line comment -->
@@ -119,7 +119,7 @@ tal:condition
   ...   <tal:multiple repeat="i range(3)" replace="i" />
   ...   <tal:div condition="True">True</tal:div>
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       Hello World!
       Hello World!
       0
@@ -137,7 +137,7 @@ tal:omit-tag
   ...   <p tal:omit-tag="True">No paragraph here either.</p>
   ...   <p tal:omit-tag="False">A paragraph here.</p>
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       No paragraph here.
       No paragraph here either.
       <p>A paragraph here.</p>
@@ -153,7 +153,7 @@ tal:omit-tag
   ...   <span tal:replace="'%sbr /%s' % (chr(60), chr(62))" />
   ...   <span tal:content="unicode('La Pe\xc3\xb1a', 'utf-8')" />
   ... </div>""")
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <img title="&lt;Hello&gt;" />
       <br />
       &lt;br /&gt;
@@ -172,7 +172,7 @@ tal:omit-tag
   ...   <span tal:replace="path: test2/greeting" />
   ... </div>""", request=object(),
   ... test1={'greeting': u'Hello'}, test2=Test())
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     Hello
     Hello
   </div>
@@ -186,7 +186,7 @@ tal:omit-tag
   ...   <img tal:attributes="alt string:Leonardo da Vinci;; Musee du Louvre, 1503;
   ...                        title string:Mona Lisa" />
   ... </div>""", request=object(), greeting=u'Hello')
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     Hello, world!
     <img alt="Leonardo da Vinci; Musee du Louvre, 1503" title="Mona Lisa" />
   </div>
@@ -200,7 +200,7 @@ tal:omit-tag
   ...     <span tal:replace="test/greeting" />
   ...   </div>
   ... </div>""", request=object(), test={'greeting': u'Hello'})
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <div>
       Hello
     </div>
@@ -226,7 +226,7 @@ tal:omit-tag
   ...       <span tal:replace="int('a')|path: mydict/a" />
   ...   </tal:path-expression-testing>
   ... </div>""")
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
   <BLANKLINE>
         <div>
            1
@@ -250,7 +250,7 @@ tal:omit-tag
   ...         tal:replace="structure nocall: dir" />
   ...   <span tal:replace="structure dir" />
   ... </div>""", request=object())
-    <div>
+    <div xmlns="http://www.w3.org/1999/xhtml">
       <built-in function dir>
       <built-in function dir>
     </div>
@@ -277,7 +277,7 @@ metal:define-macro, metal:use-macro
 
   >>> template = MockTemplate(body, ZopePageTemplateParser())
   >>> print render_zpt(body, template=template)
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <div class="greeting">
       Hello, earth!
     </div>
@@ -318,7 +318,7 @@ metal:define-slot, metal:fill-slot
   
   >>> template = MockTemplate(body, ZopePageTemplateParser())
   >>> print render_zpt(body, template=template)
-  <div>
+  <div xmlns="http://www.w3.org/1999/xhtml">
     <div>
       Hello, <b class="name">stranger!</b>
     </div>
